--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -14,6 +14,9 @@ const { post } = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogPostLayout title={post.data.title} date={post.data.date}>
+<BlogPostLayout 
+  title={post.data.title}
+  date={post.data.pubDate}
+>
   <Content />
 </BlogPostLayout> 
