--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import CrnobogButton from '../components/CrnobogButton.astro';
 import BlogPost from '../components/BlogPost.astro';
 import SearchBar from '../components/SearchBar.astro';
 import SiteLogo from '../components/SiteLogo.astro';
+import ReadModeButton from '../components/ReadModeButton.astro';
 
 interface BlogPost {
   slug: string;
@@ -32,6 +33,7 @@ const sortedPosts = posts.sort((a, b) =>
                     <SiteLogo />
                 </div>
                 <div class="nav-buttons">
+                    <ReadModeButton />
                     <CrnobogButton />
                     <GitHubButton />
                     <ThemeToggle />
