--- a/src/components/BlogPostLayout.astro
+++ b/src/components/BlogPostLayout.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import ThemeToggle from '../components/ThemeToggle.astro';
 import GitHubButton from '../components/GitHubButton.astro';
+import ReadModeButton from '../components/ReadModeButton.astro';
 
 interface Props {
   title: string;
@@ -26,6 +27,7 @@ function formatDateTime(date: Date) {
       <div class="nav-content">
         <a href="/" class="home-link">← Назад</a>
         <div class="nav-buttons">
+          <ReadModeButton />
           <GitHubButton />
           <ThemeToggle />
         </div>
